[package]
name = "defi-entities"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-transport.workspace = true


revm.workspace = true

reth-chainspec.workspace = true
reth-db.workspace = true
reth-node-builder.workspace = true
reth-node-ethereum.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true


aes.workspace = true
eyre.workspace = true
hex.workspace = true
indexmap.workspace = true
lazy_static.workspace = true
rand.workspace = true
sha2.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true
tracing.workspace = true

debug-provider.workspace = true
defi-address-book.workspace = true
defi-types.workspace = true
loom-revm-db.workspace = true
loom-utils.workspace = true

serde.workspace = true

[build-dependencies]
hex.workspace = true
rand.workspace = true

[dev-dependencies]
alloy-node-bindings.workspace = true
alloy-rpc-client.workspace = true
