[package]
name = "defi-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
defi-types.workspace = true
defi-entities.workspace = true
loom-revm-db.workspace = true
loom-utils.workspace = true

alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-consensus.workspace = true
revm.workspace = true

eyre.workspace = true
chrono.workspace = true
uniswapx-client-rs.workspace = true