[package]
name = "defi-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
defi-entities.workspace = true
defi-types.workspace = true
loom-revm-db.workspace = true
loom-utils.workspace = true

alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
revm.workspace = true

chrono.workspace = true
eyre.workspace = true
