[package]
name = "flashbots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-provider.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-network.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-json-rpc.workspace = true
alloy-transport.workspace = true
alloy-consensus.workspace = true
alloy-rlp.workspace = true

url.workspace = true
eyre.workspace = true
log.workspace = true
tokio.workspace = true
rand.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-trait.workspace = true


futures-util = "0.3"
futures-core = "0.3"
pin-project = "1"

thiserror = { version = "1.0.37", default-features = false }


