[package]
name = "loom-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
defi-blockchain.workspace = true
defi-events.workspace = true
loom-actors.workspace = true
loom-actors-macros.workspace = true

async-trait.workspace = true
chrono.workspace = true
eyre.workspace = true
influxdb.workspace = true
tokio.workspace = true
tracing.workspace = true
