[package]
name = "loom-revm-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
log.workspace = true
revm.workspace = true
rand.workspace = true
alloy.workspace = true
serde = { workspace = true, optional = true}
serde_json = { workspace = true, optional = true}

[features]
serde = ["dep:serde"]
serde-json = ["dep:serde_json"]


[dev-dependencies]
chrono.workspace = true
criterion.workspace = true

[[bench]]
name = "benchmark"
harness = false