[package]
name = "loom-revm-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy.workspace = true
rand.workspace = true
revm.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tracing.workspace = true

[features]
serde = ["dep:serde"]
serde-json = ["dep:serde_json"]


[dev-dependencies]
chrono.workspace = true
criterion.workspace = true

[[bench]]
harness = false
name = "benchmark"
