[package]
name = "loom-test"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
debug-provider.workspace = true
defi-abi.workspace = true
defi-address-book.workspace = true
defi-blockchain.workspace = true
defi-entities.workspace = true
defi-events.workspace = true
defi-pools.workspace = true
loom-actors.workspace = true
loom-revm-db.workspace = true

alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-transport.workspace = true
eyre.workspace = true
revm.workspace = true
tokio.workspace = true
tracing.workspace = true
