[package]
name = "loom-web-state"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
defi-blockchain.workspace = true
loom-db.workspace = true
loom-utils.workspace = true
