[package]
name = "loom-web"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
defi-actors.workspace = true
defi-blockchain.workspace = true
defi-entities.workspace = true
defi-types.workspace = true
loom-actors.workspace = true
loom-actors-macros.workspace = true
loom-db.workspace = true
loom-utils = { workspace = true, features = ["trace-calls"] }
loom-web-state.workspace = true

hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

alloy-primitives.workspace = true
revm.workspace = true

# async
tokio.workspace = true
tokio-util.workspace = true

# tracing + error handling
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# web
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
