[package]
name = "loom"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
loom-broadcast-flashbots.workspace = true
loom-core-actors.workspace = true
loom-core-actors-macros.workspace = true
loom-core-blockchain.workspace = true
loom-core-topology.workspace = true
loom-defi-abi.workspace = true
loom-defi-address-book.workspace = true
loom-defi-pools.workspace = true
loom-evm-db.workspace = true
loom-evm-utils.workspace = true
loom-execution-multicaller.workspace = true
loom-node-debug-provider.workspace = true
loom-types-blockchain.workspace = true
loom-types-entities.workspace = true
loom-types-events.workspace = true
