[package]
name = "loom-multicaller"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
lazy_static.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-network.workspace = true
alloy-eips.workspace = true
alloy-signer-local.workspace = true

eyre.workspace = true
tracing.workspace = true
k256.workspace = true
tokio.workspace = true

defi-address-book.workspace = true
defi-abi.workspace = true
defi-entities.workspace = true
loom-utils.workspace = true
defi-types.workspace = true
debug-provider.workspace = true

env_logger.workspace = true


[dev-dependencies]
tokio.workspace = true
