[package]
name = "loom-multicaller"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
debug-provider.workspace = true
defi-abi.workspace = true
defi-address-book.workspace = true
defi-entities.workspace = true
defi-types.workspace = true
loom-utils.workspace = true

eyre.workspace = true
k256.workspace = true
lazy_static.workspace = true
tokio.workspace = true
tracing.workspace = true

# alloy
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-signer-local.workspace = true
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
alloy-transport.workspace = true


[dev-dependencies]
env_logger.workspace = true
tokio.workspace = true
