[package]
name = "reth-exex-grpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-trace.workspace = true


reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true
reth-execution-types.workspace = true
reth-rpc-types-compat.workspace = true
reth-primitives.workspace = true

futures-util.workspace = true

async-stream.workspace = true
eyre.workspace = true

tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

bincode.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
reth-exex-test-utils.workspace = true
