[package]
name = "loom-topology"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
defi-actors.workspace = true
defi-blockchain.workspace = true
defi-entities.workspace = true
defi-events.workspace = true
defi-pools.workspace = true
defi-types.workspace = true
flashbots.workspace = true
loom-actors.workspace = true
loom-multicaller.workspace = true

reth-exex-grpc.workspace = true

alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types.workspace = true
alloy-transport.workspace = true
alloy-transport-ipc.workspace = true
alloy-transport-ws.workspace = true
revm.workspace = true


eyre.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

strum.workspace = true
strum_macros.workspace = true
