[package]
name = "loom-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
revm.workspace = true

alloy.workspace = true

reth-primitives.workspace = true
reth-db.workspace = true
reth-rpc.workspace = true
reth-rpc-types-compat.workspace = true


eyre.workspace = true
tracing.workspace = true
lazy_static.workspace = true

defi-types.workspace = true
loom-revm-db.workspace = true

debug-provider.workspace = true
defi-abi.workspace = true
