[package]
name = "loom-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
debug-provider.workspace = true
defi-abi.workspace = true
defi-address-book.workspace = true
defi-types.workspace = true
loom-revm-db.workspace = true

# misc
axum.workspace = true
eyre.workspace = true
lazy_static.workspace = true
thiserror.workspace = true
tracing.workspace = true

# revm
revm.workspace = true
revm-inspectors = { workspace = true, optional = true }

# alloy
alloy.workspace = true

# reth
reth-db.workspace = true
reth-primitives.workspace = true
reth-rpc.workspace = true
reth-rpc-types-compat.workspace = true

[features]
trace-calls = ["revm-inspectors"]
