[package]
name = "loom-core-block-history"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
loom-core-actors.workspace = true
loom-core-actors-macros.workspace = true
loom-core-blockchain.workspace = true
loom-defi-entities.workspace = true
loom-defi-events.workspace = true
loom-defi-types.workspace = true
loom-node-debug-provider.workspace = true


eyre.workspace = true
tokio.workspace = true
tracing.workspace = true

alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-transport.workspace = true

[dev-dependencies]
loom-evm-db.workspace = true
loom-evm-utils.workspace = true

alloy-eips.workspace = true
alloy-node-bindings.workspace = true
alloy-rpc-client.workspace = true
env_logger.workspace = true
revm.workspace = true
